# archon

./: .gitignore  README.md  design_guidelines.json  vercel.json
.emergent/: emergent.yml
.github/workflows/: ci.yml
backend/: .env.example  auth.py  config.py  database.py  memory_search.py  pyproject.toml  requirements.txt  server.py  test_key.py
backend/migrations/: 001_enable_rls.sql
backend/routers/: ai.py  auth.py  memory.py  projects.py  stats.py  tasks.py
backend/tests/: test_clerk_supabase.py  test_ghostboard.py  test_sprint_planner.py
frontend/: .env.example  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css  index.js
frontend/src/components/: AnimatedBackground.js  ErrorBoundary.js  Navbar.js  ProtectedRoute.js
frontend/src/context/: AuthContext.js
frontend/src/hooks/: useAIStream.js
frontend/src/pages/: AuthPage.js  CTODashboard.js  Dashboard.js  LandingPage.js  PrivacyPolicy.js  ProjectArchitect.js  RAGMemory.js  SprintPlanner.js  TermsOfService.js
memory/: PRD.md
scripts/: start.sh
tasks/: todo.md
test_reports/: iteration_1.json  iteration_2.json
test_reports/pytest/: pytest_results.xml  sprint_results.xml
