[project]
name = "app"
version = "0.1.0"
dependencies = [ "fastapi==0.110.1", "uvicorn==0.25.0", "python-dotenv>=1.0.1", "pydantic>=2.6.4", "email-validator>=2.2.0", "pyjwt>=2.10.1", "cryptography>=42.0.8", "python-multipart>=0.0.9", "supabase", "httpx==0.28.1", "slowapi", "structlog", "requests>=2.31.0", "pytest>=8.0.0" ]
requires-python = "~=3.12.0"
